--- a/climate_analysis.ipynb
+++ b/climate_analysis.ipynb
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,26 +64,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\maron\\AppData\\Local\\Temp\\ipykernel_32328\\3234841112.py:2: SAWarning: This declarative base already contains a class with the same class name and module name as sqlalchemy.ext.automap.measurement, and will be replaced in the string-lookup table.\n",
-      "  Base.prepare(engine, reflect=True)\n",
-      "C:\\Users\\maron\\AppData\\Local\\Temp\\ipykernel_32328\\3234841112.py:2: SAWarning: This declarative base already contains a class with the same class name and module name as sqlalchemy.ext.automap.station, and will be replaced in the string-lookup table.\n",
-      "  Base.prepare(engine, reflect=True)\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
        "['measurement', 'station']"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -98,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -144,7 +134,7 @@
        "<AxesSubplot:xlabel='date'>"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -192,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -268,7 +258,7 @@
        "max         6.700000"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -280,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -289,7 +279,7 @@
        "[(9,)]"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -301,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -374,7 +364,7 @@
        "2016-08-23  2016-08-23           0.15"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -385,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -402,7 +392,7 @@
        " ('USC00518838', 511)]"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -418,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -427,7 +417,7 @@
        "[(54.0, 85.0, 71.66378066378067)]"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -442,7 +432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -528,7 +518,7 @@
        "9  80.0"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -550,7 +540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -559,7 +549,7 @@
        "<AxesSubplot:ylabel='Frequency'>"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -590,6 +580,51 @@
    "source": [
     "# Write a function called `calc_temps` that will accept start date and end date in the format '%Y-%m-%d' \n",
     "# and return the minimum, average, and maximum temperatures for that range of dates\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Import flask\n",
+    "\n",
+    "from flask import Flask\n",
+    "\n",
+    "# Variables with underscores before and after them are called magic methods\n",
+    "app = Flask(__name__)\n",
+    "\n",
+    "# CREATE FLASK ROUTES\n",
+    "# / denotes that we want to put our data at the root of our routes\n",
+    "\n",
+    "@app.route(\"/\")\n",
+    "def welcome():\n",
+    "    return(\n",
+    "    '''\n",
+    "    Welcome to the Climate Analysis API!\n",
+    "    Available Routes:\n",
+    "    /api/v1.0/precipitation\n",
+    "    /api/v1.0/stations\n",
+    "    /api/v1.0/tobs\n",
+    "    /api/v1.0/temp/start/end\n",
+    "    ''')\n",
+    "\n",
+    "@app.route(\"/api/v1.0/precipitation\")\n",
+    "def precipitation():\n",
+    "   prev_year = dt.date(2017, 8, 23) - dt.timedelta(days=365)\n",
+    "   precipitation = session.query(Measurement.date, Measurement.prcp).\\\n",
+    "    filter(Measurement.date >= prev_year).all()\n",
+    "   precip = {date: prcp for date, prcp in precipitation}\n",
+    "   return jsonify(precip)\n",
+    "\n",
+    "if __name__ == '__main__':\n",
+    "    app.debug = True\n",
+    "    app.run()\n",
+    "    \n",
+    "#if __name__ == '__main__':\n",
+    "    #app.debug = False\n",
+    "    #app.run()"
    ]
   },
   {
